# ProteinBlender

./: .gitignore  0.5.11  1.5.3  BROWNIAN_MOTION_CHECKBOX_FEATURE.md  BUILD_INSTRUCTIONS.md  CHAIN_ISSUE.md  CLAUDE.md  Chain_Mapping_Comparison.md  INSTRUCTIONS_swap_areas.md  MANIFEST.in  MyTodo.md  OutlinerPopulationTodo.md  ProteinOutlinerTodo.md  README.md  SELECTION_ANALYSIS.md  SELECTION_SYSTEM_REDESIGN.md  UI_UPDATE_PRP.md  UNDO_REDO_SYSTEM.md  VisualSetupTodo.md  __init__.py  blender_manifest.toml  build.py  build_local.sh  check_collections.py  debug_areas.py  debug_group_objects.py  debug_objects.py  debug_selection.py  dev_register.py  dev_reload.py  foo__init__.py  generate_local_repo.py  move_dopesheet_to_bottom.py  pb.code-workspace  pyproject.toml  reorganize_workspace.py  setup.py  test_2way_sync.py  test_3b75_debug.py  test_addon.py  (+62 more)
.claude/agents/: code-reviewer.md  (+2 more)
.github/: GITHUB_PAGES_SETUP.md  RELEASE_CHECKLIST.md  UPDATER_COMPARISON.md  WORKFLOW_DIAGRAM.md  gh-pages-readme.md
PRPs/: ui-redesign.md
ProteinBlender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: .gitignore  CHAIN_ISSUE_ANALYSIS_REPORT.md  CHAIN_SELECTION_VISIBILITY_FIX.md  Gemfile  Poses.md  README.md  UI_IMPLEMENTATION_SUMMARY.md  _config.yml  blender_protein_undo.md  import.md  index.md  installation.md  keyframes.md  poses.md  puppets.md  undo_redo_todo.md  visuals.md
documentation/: AUTO_UPDATER.md  CHAIN_DELETION.md  EXTENSION_REPOSITORY.md  INITIALIZE.md  MCP_DESCRIPTION.md  POSE_PANEL_IMPLEMENTATION.md  Poses.md  SIMPLIFIED_POSE_PANEL.md  Selection_Mechanism.md  UI_REDESIGN.md
handlers/: __init__.py  load_handlers.py
layout/: workspace_setup.py  workspace_setup2.py
operators/: __init__.py  operator_import_pdb.py  operator_import_protein.py
panels/: __init__.py  panel_import_pdb.py  panel_import_protein.py  protein_list_panel.py
properties/: __init__.py  protein_props.py
props/: __init__.py  properties_protein.py  protein_properties.py
proteinblender/: __init__.py  addon.py  blender_manifest.toml
tests/: comprehensive_test.py  simple_comprehensive_test.py  simple_test.py  test_1atn_analysis.py  test_1atn_simple.py  test_chain_mapping_issue.py  test_fixed_registration.py  test_inclusive_domains.py
tmp_tests/: test_auth_map.py  test_brownian_motion_checkbox.py  test_chain_analysis.py  test_chain_issue_investigation.py  test_chain_selection_visibility.py  test_complete_ui.py  test_current_functionality.py  test_domain_creation_simulation.py  test_domain_maker.py  test_group_maker.py  test_keyframe_undo_redo_specific.py  test_minimal_checkbox.py  test_no_update_functions.py  test_operator_registration_debug.py  test_outliner_operators.py  test_outliner_v2.py  test_pose_undo_redo_fix.py  test_properties_panels.py  test_property_system_debug.py  test_simple_checkbox.py  test_simple_undo_redo.py  test_ui_complete.py  test_undo_redo_fix_verification.py  test_update_function_call.py  test_visual_setup.py  test_workspace_creation.py
ui/: __init__.py
utils/: file_io.py  molecule.py  protein.py  scene_manager.py
visualizer/: base.py  constants.py  materials.py  molecule_visualization.py  protein_mesh.py  protein_point_cloud.py
wheels/: databpy-0.0.8-py3-none-any.whl  fonttools-4.55.3-cp311-cp311-macosx_10_9_universal2.whl  fonttools-4.55.3-cp311-cp311-macosx_10_9_x86_64.whl
(+132 files in other folders)
