[project]
name = "proteinblender"
version = "0.1.0"
description = "Visualize and animate proteins in Blender"
readme = "README.md"
dependencies = ["databpy", "MDAnalysis>=2.7.0", "biotite~=0.40", "mrcfile", "starfile"]
maintainers = [{name = "Dillon Lee", email = "dlee123@gmail.com"}]

[project.urls]
Homepage = "https://github.com/dillonl/ProteinBlender"
Repository = "https://github.com/dillonl/ProteinBlender"
Documentation = "https://github.com/dillonl/ProteinBlender"

[project.optional-dependencies]
bpy =  ["bpy>=4.2"]
dev = ["pytest", "pytest-cov", "syrupy", "scipy", "fake-bpy-module"]
test = ["pytest", "pytest-cov", "syrupy", "scipy"]
docs = ["quartodoc", "tomlkit", "nodepad"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool.setuptools]
include-package-data = true
packages = ["proteinblender"]

[tool.setuptools.package-data]
proteinblender = ["utils/molecular_nodes/assets/*", "utils/molecular_nodes/assets/template/*", "**/*.py"]
