[project]
name = "proteinblender"
version = "4.2.10"
description = "Visualize and animate proteins in Blender"
readme = "README.md"
dependencies = [
    "databpy>=0.0.8",
    "MDAnalysis>=2.8.0",
    "biotite>=0.41.2",
    "mrcfile>=1.5.3",
    "starfile>=0.5.11"
]
maintainers = [{name = "Dillon Lee", email = "dlee123@gmail.com"}]

[project.urls]
Homepage = "https://github.com/dillonl/ProteinBlender"
Repository = "https://github.com/dillonl/ProteinBlender"
Documentation = "https://github.com/dillonl/ProteinBlender"

[project.optional-dependencies]
bpy =  ["bpy>=4.2"]
dev = ["pytest", "pytest-cov", "syrupy", "scipy", "fake-bpy-module"]
test = ["pytest", "pytest-cov", "syrupy", "scipy"]
docs = ["quartodoc", "tomlkit", "nodepad"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool.setuptools]
include-package-data = true
packages = ["proteinblender"]

[tool.setuptools.package-data]
proteinblender = ["utils/molecular_nodes/assets/*", "utils/molecular_nodes/assets/template/*", "**/*.py"]
