[project]
name = "proteinblender"
version = "0.4.0"
description = "Visualize and animate proteins in Blender"
readme = "README.md"
dependencies = [
    "databpy>=0.0.18",
    "MDAnalysis>=2.7.0",
    "biotite>=1.1",
    "mrcfile",
    "starfile",
    "PyYAML"
]
maintainers = [{name = "Dillon Lee", email = "dlee123@gmail.com"}]
requires-python = "~=3.11"

[project.urls]
Homepage = "https://github.com/dillonl/ProteinBlender"
Repository = "https://github.com/dillonl/ProteinBlender"
Documentation = "https://github.com/dillonl/ProteinBlender"

[project.optional-dependencies]
bpy = ["bpy>=4.4"]
jupyter = ["jupyter", "IPython"]
dev = ["pytest", "pytest-cov", "syrupy", "scipy", "fake-bpy-module", "IPython"]
test = ["pytest", "pytest-cov", "syrupy", "scipy", "IPython", "pytest-xdist"]
docs = ["quartodoc", "tomlkit", "nodepad", "jupyter", "IPython", "jupyter-cache"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool.setuptools]
include-package-data = true
packages = ["proteinblender"]

[tool.setuptools.package-data]
proteinblender = ["utils/molecular_nodes/assets/*", "utils/molecular_nodes/assets/template/*", "**/*.py"]
